styles/main.css
@font-face {
  font-family: "Roboto";
  src: url("../fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: url("../fonts/Roboto-Italic-VariableFont_wdth\,wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: italic;
}

* {
  margin: 0;
  padding: 0;
}

body{
   font-family: "Roboto";
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;

    background-color: #1f2d44;
    padding: 1.5rem 2.6rem;
}

.logo {
    color: white;
    font-size: 20px;
    font-weight: 700;
}

.nav-links {
    display: flex;
    gap: 3rem;
    list-style: none;
}

.nav-links a {
    color: #fff;
    text-decoration: none;
    font-size: 14px;
}

/* Hero Section */
.hero {
    display: flex;
    justify-content:center;
    width: 100%;

    margin: 0 auto;
    padding: 4rem 2rem;
    background-color: #1b263b;
    color: #ffffff;
}

.hero-content {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    flex: 1;
    width: 13.75rem;
}

.hero-content h1 {
    font-size: 4rem;
    line-height: 1.1;
    font-weight: 700;
}

.hero-content p {
    font-size: 1.3rem;
    line-height: 1.6;
    color: #a8b0c0;
}

.hero-image {
    display: flex;
    justify-content: center;
    align-items: center;

    flex: 1;
    width: 100px;
    overflow: hidden;
}

.hero-image img {
    width: 100%;
    max-width: 500px;
    height: auto;
    border-radius: 0.5rem;
}


h2{
  font-size: 36px;
  font-weight: 700;
  color: rgb(31 41 55);
  display: flex;
  justify-content: center;
}

.section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-top: 2.6rem;
}

.card-row {
  display: flex;
  justify-content: center;
  gap: 1.5rem;
  padding: 2.6rem 0;
}

.card {
  width: 13.75rem;
  margin: 0;
}

.card .card-image {
  width: 100%;
  aspect-ratio: 1 / 1;
  object-fit: cover;   
  object-position: center;
  border-radius: 0.7rem;
}

@media (max-width: 768px) {
  .card-row {
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }

  .card {
    width: 90%;
    max-width: 20rem;
  }
}



figcaption {
  text-align: center;
  margin-top: 8px;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;;
}

.quote-section {
  background-color: #E5E7EB;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  overflow: hidden;
}

.quote-container {
  width: 50%;
  display: flex;
  flex-direction: column;
  padding: 2.6rem 5.2rem;
}

.quote-text {
  font-size: 36px;
  font-style: italic;
  font-weight: 300;
  color: #1F2937;
}

.quote-author {
  align-self: flex-end;
}

.newsletter {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 2rem;
}

.newsletter-content {
  width: 50%;
  background-color: #4285f4;
  border-radius: 0.75rem;

  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 1.75rem 2.5rem;
}

.newsletter-text h3 {
    color: white;
    font-size: 20px;
}

.newsletter-text p {
    margin: 0.4rem 0 0;
    color: rgba(255, 255, 255);
    font-size: 14px;
}

.btn{
    border: none;
    background-color: white;
    color: #333;
    padding: 0.75rem 1.5rem;
    border-radius: 0.3rem;
    font-weight: 600;
    font-size: 14px;
}

.info-card {
    display: flex;
    flex-direction: column;
    justify-content: center;

    background-color: white;
    border-radius: 12px;

    padding: 2rem;
    width: 450px;
    min-height: 180px;

    box-sizing: border-box;
}  

.quote-containers {
  width: 50%;
  display: flex;
  flex-direction: row;
  padding: 2.6rem 5.2rem;
}

footer {
  background-color: #1F2937;
  color: #E5E7EB;
  text-align: center;
  padding: 1rem;
}

.quote-section {
  background-color: #E5E7EB;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  overflow: hidden;
  margin-bottom: 4.6rem;
}

.quote-container {
  width: 50%;
  display: flex;
  flex-direction: column;
  padding: 2.6rem 5.2rem;
}

.quote-text {
  font-size: 36px;
  font-style: italic;
  font-weight: 300;
  color: #1F2937;
}

.quote-author {
  align-self: flex-end;
}


.destinations {
  margin: 2.6rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 1.6rem;
}

.destinations h2 {
  width: 80%;
  display: flex;
  justify-content: flex-start;
}

.destinations-first-row,
.destinations-second-row {
  width: 80%;
  display: flex;
}

article.destination {
  width: 33%;
}

article.destination h3 {
  margin-bottom: 4px;
}

article.destination .img-card {
  width: 90%;
  height: 180px;
  border-radius: 4px;
  overflow: hidden;
  margin-bottom: 6px;
}

article.destination .img-card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

article p {
  width: 90%;
  font-size: 16px;
}

/*MEDIA QUERIES*/

@media (max-width: 768px) {
    .navbar {
        flex-direction: column;
        gap: 1rem;
        padding: 1.5rem;
    }

    .nav-links {
        gap: 1.5rem;
        flex-wrap: wrap;
        justify-content: center;
    }
}


@media (max-width: 768px) {
  footer{
    font-size: 12px;
  }

  .destinations-first-row,
  .destinations-second-row {
    flex-direction: column;
    align-items: flex-start;
    row-gap: 1.6rem;
  }

  article.destination {
    width: 100%;
  }

  article.destination img {
    width: 50%;
    object-fit: cover;
  }

  article.destination .img-card {
    width: 100%;
    height: 180%;
    border-radius: 4px;
    overflow: hidden;
    margin-bottom: 6px;
  }

  article.destination .img-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  article p {
    width: 100%;
    font-size: 16px;
  }

  article.destination h3 {
    margin-bottom: 6px;
  }
}

